@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="script.movielib"
     name="Movielib"
-    version="1.4.4"
+    version="1.4.5"
     provider-name="Regss">
     <requires>
-        <import addon="xbmc.python" version="2.1.0" />
+        <import addon="xbmc.python" version="2.14.0" />
         <import addon="service.movielib" version="1.0.2" />
         <import addon="script.module.pil" version="1.1.7" />
     </requires>
