@@ -1,3 +1,6 @@
+[B]1.4.5[/B]
+- now all images will be taken from Thumbnails cache folder
+
 [B]1.4.4[/B]
 - Fixed: images update
 - Added: sync images without saving to temp
